[package]
name = "tanin"
version = "0.1.0"
authors = ["AnonMiraj"]
edition = "2021"
description = "A TUI ambient sound generator written in Rust."
license = "MIT"
keywords = ["tui", "audio", "ambient", "noise"]
categories = ["multimedia::audio", "command-line-utilities"]
repository = "https://github.com/AnonMiraj/Tanin"
exclude = ["assets/**/*"]

[features]
default = ["jack"]
jack = ["cpal/jack"]

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
rodio = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
directories = "5.0"
toml = "1.0.0"
clap = { version = "4.5.58", features = ["derive"] }
log = "0.4.29"
simplelog = "0.12.2"
magnum = { version = "1.0.1", features = ["rodio"] }
minreq = { version = "2.11", default-features = false, features = [
  "https-native",
] }
cpal = "0.15.3"
# libc = "0.2.182"
nix = { version = "0.31.2", default-features = false, features = ["fs"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
